Uploaded image for project: 'Xerces-C++'
  1. Xerces-C++
  2. XERCESC-2214

Wrong delete[] in MemBufInputSource dtor

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Minor
    • Resolution: Fixed
    • 3.2.3
    • 3.2.4, 4.0.0
    • Miscellaneous
    • None

    Description

      Our address sanatizer found a mismatching delete[] for memory allocated via new (not new[]) in the destructor of MemBufInputSource.

      I looked at the code to find places where new[] is used which would make it necessary to use delete[] instead of delete - without success. It seems to me that using delete[] is simply wrong here.

       

      Attachments

        Activity

          People

            scantor Scott Cantor
            Tobi4242 Tobias Elbrandt
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: