XERCESC-2214 - Wrong delete[] in MemBufInputSource dtor

https://issues.apache.org/jira/browse/XERCESC-2214